# microthingisregistry

./: .env  .gitignore  Cargo.toml  readme.md
fe/feapp/: package-lock.json  package.json
fe/feapp/.parcel-cache/: 1d11806abf58443d  37dbec41244c32ee.txt  7c901be8e1fcacd1  839725f60ad82a5f  a9f5484dda8bfe2c  be421f5ad77beb1a  faf76a89a5ae82aa  lock.mdb
fe/feapp/src/: app.ts  common.ts  index.html
migrations/01_host/: down.sql  up.sql
migrations/02_microservice/: down.sql  up.sql
migrations/02_service/: up.sql
migrations/03_technology/: down.sql  up.sql
migrations/04_backend/: down.sql  up.sql
migrations/05_frontend/: down.sql  up.sql
migrations/2023-03-07-201201_backend/: down.sql
migrations/2023-03-07-201213_technology/: down.sql
migrations/2023-03-07-224034_technology/: up.sql
migrations/2023-03-07-224116_backend/: up.sql
migrations/2023-03-07-224119_frontend/: down.sql  up.sql
scripts/: dump.sh  insert_data.sh
src/: create_data.rs  insert_data.rs  main.rs  models.rs  read_data.rs  schema.rs  utils.rs
src/backend/: backend_rest.rs  mod.rs
src/db/: create_data.rs  db.rs  insert_data.rs  mod.rs  read_data.rs
src/frontend/: frontend_rest.rs  mod.rs
src/host/: host_rest.rs  mod.rs
src/microservice/: microservice.rs  mod.rs
src/models/: mod.rs  models.rs  rest_models.rs
src/technology/: mod.rs  technology_rest.rs  technology_restt.rs
ubuntu/: rust_microthingisregistry.service
ubuntu/nginx/: microthingsregistry
