[package]
name = "warp_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp="0.3.3"
diesel = { version = "2.0.3", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
diesel_migrations="2.0.0"
r2d2="0.8.2"