[package]
name = "warp_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
diesel = { version = "2.0.3", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
diesel_migrations = "2.0.0"
r2d2 = "0.8.2"
serde = "1.0.154"
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.155"
tokio = { version = "1.26.0", features = ["full"] }
#, features = ["fs", "sync", "time"]
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
